2004-10-10  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Warn about trailing (back)slash on mount
	entries.

2004-10-10  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Don't warn about empty path components,
	just display ``.''.

2004-10-06  Corinna Vinschen  <corinna@vinschen.de>

	* strace.cc (_impure_ptr): Remove.

2004-10-06  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Warn about empty path-components.

2004-10-04  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (pretty_id): Close pipe.

2004-09-23  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* dump_setup.cc (dump_setup): Remove unneeded strlen when check_files
	is not set.

2004-09-22  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>
	    Corinna Vinschen  <corinna@vinschen.de>

	* dump_setup.cc (dump_setup): Avoid trailing spaces on package-list.

2004-09-15  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* getfacl.c (main): Correct layout when nopt is set.

2004-07-12  Igor Pechtchanski  <pechtcha@cs.nyu.edu>

	* mkgroup.cc (netapibufferallocate,netgroupgetinfo): New function
	pointers.
	(load_netapi): Load NetApiBufferAllocate and NetGroupGetInfo.
	(enum_local_groups,enum_groups): Add disp_groupname parameter.
	Load info for disp_groupname if specified.
	(usage): Add description of "-g/--group" option.
	(longopts,opts): Add "-g/--group" option.
	(main): Process "-g/--group" option.
	* utils.sgml (mkgroup): Add description of "-g/--group" option

2004-06-15  Alan Modra  <amodra@bigpond.net.au>

	* dumper.cc (dumper::prepare_core_dump): Use bfd_get_section_size
	instead of _raw_size.
	(dumper::write_core_dump): Likewise.
	* parse_pe.cc (select_data_section): Likewise.

2004-05-29  John Paul Wallington  <jpw@gnu.org>

	* ssp.c (usage): Add missing linefeed.

2004-05-27  Christopher Faylor  <cgf@alum.bu.edu>
